--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">todo_list</string>
+    <string name="search">search</string>
+    <string name="today_task">Today’s tasks</string>
 </resources>
