--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">todo_list</string>
     <string name="search">search</string>
     <string name="today_task">Today’s tasks</string>
+    <string name="back_button">Back button</string>
+    <string name="task_description">Please, description your task</string>
+    <string name="select_date_button">Select date button</string>
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
 </resources>
