--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,11 @@
     <string name="task_description">Please, description your task</string>
     <string name="select_date_button">Select date button</string>
     <string name="ok">OK</string>
+    <string name="yes">Yes</string>
     <string name="cancel">Cancel</string>
+    <string name="delete_icon">Delete icon</string>
+    <string name="delete_icon_button">Delete icon button</string>
+    <string name="edit_icon_button">Edit icon button</string>
+    <string name="delete_dialog_text">Are you sure want to delete this task?</string>
+
 </resources>
